# rts-feat

./: CMakeLists.txt  README.md  rtsfeat.kdev4
assets/textures/world/terrain/test/GIMP/: desert-tile-0-0000.xcf  desert-tile-0-0001.xcf  desert-tile-0-0010.xcf  desert-tile-0-0011.xcf  desert-tile-0-0100.xcf  desert-tile-0-0101.xcf  desert-tile-0-0110.xcf  desert-tile-0-0111.xcf  desert-tile-0-1000.xcf  desert-tile-0-1001.xcf  desert-tile-0-1010.xcf  desert-tile-0-1011.xcf  desert-tile-0-1100.xcf  desert-tile-0-1101.xcf  desert-tile-0-1110.xcf  desert-tile-0-1111.xcf  desert-tile-1-0001.xcf  desert-tile-1-0010.xcf  desert-tile-1-0011.xcf  desert-tile-1-0100.xcf  desert-tile-1-0101.xcf  desert-tile-1-0110.xcf  desert-tile-1-0111.xcf  desert-tile-1-1000.xcf  desert-tile-1-1001.xcf  desert-tile-1-1010.xcf  desert-tile-1-1011.xcf  desert-tile-1-1100.xcf  desert-tile-1-1101.xcf  desert-tile-1-1110.xcf  desert-tile-1-1111.xcf  grassland-tile-0-0000.xcf  grassland-tile-0-0001.xcf  grassland-tile-0-0010.xcf  grassland-tile-0-0011.xcf  grassland-tile-0-0100.xcf  grassland-tile-0-0101.xcf  grassland-tile-0-0110.xcf  grassland-tile-0-0111.xcf  grassland-tile-0-1000.xcf  (+55 more)
docs/: comments.txt
include/: Game.hpp  GameState.hpp
include/AnimationManager/: AnimationManager.hpp
include/ComponentManager/: ComponentManager.hpp
include/GameStates/: GameState.hpp  MainMenuState.hpp  MapEditorState.hpp
include/ResourceManager/: ResourceManager.hpp
include/TileMap/: TileMap.hpp
include/UI/: UI-Design.txt  UIBase.hpp  UIContainer.hpp  UILabel.hpp
include/UI/Components/: C_ComponentBase.hpp  C_UIBackground.hpp  C_UICaption.hpp  C_UIGroup.hpp  C_UIScrollBar.hpp  C_UITitleBar.hpp
include/UIManager/: UIManager.hpp
include/Utility/: Constants.hpp  Log.hpp  System.hpp
include/WorldEntities/EntityComponents/: Animation.hpp
src/: Game.cpp  main.cpp
src/AnimationManager/: AnimationManager.cpp
src/ComponentManager/: ComponentManager.cpp
src/GameStates/: MainMenuState.cpp  MapEditorState.cpp
src/ResourceManager/: ResourceManager.cpp
src/TileMap/: TileMap.cpp
src/UI/Components/: C_UIBackground.cpp  C_UICaption.cpp  C_UIGroup.cpp  C_UIScrollBar.cpp
src/UIManager/: UIManager.cpp
src/Utility/: Log.cpp  System.cpp
src/WorldEntities/EntityComponents/: Animation.cpp
